--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 services:
   polybot:
     image: ${POLYBOT_IMG_NAME}
+    container_name: polybot
     ports:
       - "8443:8443"
     environment:
@@ -14,6 +15,7 @@ services:
 
   yolo:
     image: ${YOLO_IMG_NAME}
+    container_name: yolo
     ports:
       - "8081:8081"
     environment:
