--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
 
   mongo1:
     image: mongo:5
+    command: ["mongod", "--replSet", "myReplicaSet", "--bind_ip", "localhost,mongo1"]
     container_name: mongo1
     restart: always
     ports:
@@ -36,6 +37,7 @@ services:
 
   mongo2:
     image: mongo:5
+    command: ["mongod", "--replSet", "myReplicaSet", "--bind_ip", "localhost,mongo2"]
     container_name: mongo2
     restart: always
     ports:
@@ -45,6 +47,7 @@ services:
 
   mongo3:
     image: mongo:5
+    command: ["mongod", "--replSet", "myReplicaSet", "--bind_ip", "localhost,mongo3"]
     container_name: mongo3
     restart: always
     ports:
