--- a/.github/workflows/service-deploy-prod.yaml
+++ b/.github/workflows/service-deploy-prod.yaml
@@ -87,3 +87,5 @@ jobs:
             
             # Take it up with the current updated values
             docker compose up -d
+            sleep 10
+            docker exec -it mongo1 mongosh --eval "rs.initiate({_id: \"myReplicaSet\", members: [{_id: 0, host: \"mongo1\"}, {_id: 1, host: \"mongo2\"}, {_id: 2, host: \"mongo3\"}]})"
