--- a/.github/workflows/service-deploy-prod.yaml
+++ b/.github/workflows/service-deploy-prod.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  BOT_INSTANCE_DOMAIN: prod-bot.mohammadgh.click  # TODO replace to your bot domain
+  BOT_INSTANCE_DOMAIN: https://prod-bot.mohammadgh.click:8443  # TODO replace to your bot domain
 
 jobs:
   PolybotBuild:
@@ -79,9 +79,11 @@ jobs:
             
             # Generate .env file
             echo """
-            POLYBOT_IMG_NAME=polybot:${{ github.run_number }}
-            YOLO5_IMG_NAME=yolo5:${{ github.run_number }}
+            POLYBOT_IMG_NAME=mohammadgh99/polybot:${{ github.run_number }}
+            YOLO_IMG_NAME=mohammadgh99/yolo5:${{ github.run_number }}
             TELEGRAM_APP_URL=$BOT_INSTANCE_DOMAIN
+            TELEGRAM_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}
+            BUCKET_NAME=netflixfrontend-mgh
             """ > .env
             
             # Take the service down
