--- a/.github/workflows/service-deploy-dev.yaml
+++ b/.github/workflows/service-deploy-dev.yaml
@@ -92,4 +92,8 @@ jobs:
             # Take it up with the current updated values
             docker compose up -d
             sleep 10
-            docker exec mongo1 mongosh --eval "rs.initiate({_id: \"myReplicaSet\", members: [{_id: 0, host: \"mongo1\"}, {_id: 1, host: \"mongo2\"}, {_id: 2, host: \"mongo3\"}]})"
+            # check if replica set initialized
+            docker exec mongo1 mongosh --eval 'rs.status()' | grep -q '"ok" : 0'
+            if [ $? -eq 0 ]; then
+              docker exec mongo1 mongosh --eval 'rs.initiate({_id: "myReplicaSet", members: [{_id: 0, host: "mongo1"}, {_id: 1, host: "mongo2"}, {_id: 2, host: "mongo3"}]})'
+            fi
