--- a/.github/workflows/service-deploy-dev.yaml
+++ b/.github/workflows/service-deploy-dev.yaml
@@ -50,7 +50,8 @@ jobs:
     needs:
       - PolybotBuild
       - Yolo5Build
-
+    env:
+      BOT_INSTANCE_DOMAIN: dev-bot.mohammadgh.click
     steps:
       - name: Checkout the repo code
         uses: actions/checkout@v2
