--- a/.github/workflows/service-deploy-dev.yaml
+++ b/.github/workflows/service-deploy-dev.yaml
@@ -74,7 +74,7 @@ jobs:
           script: |
             # You deployment script here...
             
-            cd PolybotService/
+            cd PolybotServiceDockerFursa/
             
             # Save telegram bot token in a secret file, to be used in docker-compose.yaml
             echo -n "${{ secrets.TELEGRAM_BOT_TOKEN }}" > telegram_bot_token.secret
