--- a/.github/workflows/service-deploy-dev.yaml
+++ b/.github/workflows/service-deploy-dev.yaml
@@ -63,7 +63,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           source: docker-compose.yaml
-          target: PolybotService/
+          target: PolybotServiceDockerFursa/
 
       - name: Update the Docker Compose project in the EC2
         uses: appleboy/ssh-action@master
