testing dev yaml

--- a/.github/workflows/service-deploy-dev.yaml
+++ b/.github/workflows/service-deploy-dev.yaml
@@ -18,9 +18,10 @@ jobs:
       - name: Build and push image
         run: |
           cd polybot
+          echo -n "${{ secrets.CERT_PEM }}" > cert.pem
+          echo -n "${{ secrets.SSL_PRIVATE_KEY }}" > private.key
           ls
-          pwd
-
+          
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
 
           IMAGE_NAME=polybot:${{ github.run_number }}
