--- a/.github/workflows/service-deploy-dev.yaml
+++ b/.github/workflows/service-deploy-dev.yaml
@@ -19,8 +19,7 @@ jobs:
         run: |
           cd polybot
           
-          echo "${{ secrets.CERT_PEM }}" > cert.pem
-          echo "${{ secrets.SSL_PRIVATE_KEY }}" > private.key
+          openssl req -newkey rsa:2048 -sha256 -nodes -keyout private.key -x509 -days 365 -out cert.pem -subj "/C=US/ST=New York/L=Brooklyn/O=Example Brooklyn Company/CN=${{ env.BOT_INSTANCE_DOMAIN }}:8443"
           
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
 
