--- a/.github/workflows/service-deploy-dev.yaml
+++ b/.github/workflows/service-deploy-dev.yaml
@@ -19,7 +19,9 @@ jobs:
         run: |
           cd polybot
           
-          openssl req -newkey rsa:2048 -sha256 -nodes -keyout private.key -x509 -days 365 -out cert.pem -subj "/C=US/ST=New York/L=Brooklyn/O=Example Brooklyn Company/CN=${{ env.BOT_INSTANCE_DOMAIN }}:8443"
+          
+          echo "${{ secrets.CERT_PEM }}" > cert.pem
+          echo "${{ secrets.SSL_PRIVATE_KEY }}" > private.key
           
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
 
